--- a/FibonacciRest/FibonacciRest_2.csproj
+++ b/FibonacciRest/FibonacciRest_2.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fibonacci.Common\Fibonacci.Common.csproj" />
+  </ItemGroup>
+
 </Project>
