--- a/Fibonacci.MQ/Fibonacci.MQ.csproj
+++ b/Fibonacci.MQ/Fibonacci.MQ.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>	
+	<DockerfileRunEnvironmentFiles>debug.env</DockerfileRunEnvironmentFiles>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="6.3.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Fibonacci.Common\Fibonacci.Common.csproj" />
   </ItemGroup>
 
 </Project>
